--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-jest-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
@@ -17,5 +17,14 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "parcel": "^2.2.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/youngwoanglee13/TorosYVacas.git"
+  },
+  "bugs": {
+    "url": "https://github.com/youngwoanglee13/TorosYVacas/issues"
+  },
+  "homepage": "https://github.com/youngwoanglee13/TorosYVacas#readme"
 }
